[package]
name = "study_server"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.32", features = ["tokio-comp"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
bytes = "1.0"
dashmap = "6.0"